guide button mobile fix

--- a/portfolio.css
+++ b/portfolio.css
@@ -432,15 +432,21 @@ html,
     .project-tiles {
         left: 32%;
     }
+    #training-button {
+        left: 36%;
+        top: 50;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
     #guide-button {
         position: relative;
-        top: 0;
+        top: -44px;
         bottom: 0;
         left: 0;
         right: 0;
-        left: 8%;
-    top: -35px;   
-    padding: 8px 22px;
+        left: 8%;  
+    padding: 5px 22px;
+    margin-bottom: 0;
  }
     #project-one-headline {
         display: none;
